--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -1022,7 +1022,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "I feel that Gradient Boosting would be the appropriate model for this particular data-set considering the above results. The evaluation matric being the F-Score of the model on the dataset, Gradient Boosting, with a Accuracy of 0.87 and F-Score of 0.75 stands out among other options considered which are Logistic regression and Decision Tree Classifier. Ensemble models are always better as compared to others because, they average out bias, reduce variance and are highly unlikely to overfit any dataset. Ensemble is a Machine Learning concept in which the idea is to train multiple models using the same learning algorithm. Boosting could generate a combined model with lower errors as it optimises the advantages and reduces pitfalls of the single model. Although, it lacks behind when it comes to reduce over-fitting when compared with bagging.\n",
+    "\n",
+    "\n",
+    "Logistic regression performed decent enough as well because the data might have been mostly linearly seperable, and the Decision Tree is performing poorly due to the overfitting and no parameters tuned.\n",
+    "\n",
+    "\n",
+    "The accuracy comes at a cost of a higher training/predicting time period.\n",
+    "This algorithm can work well with small datasets but the time factor would be something which would require attention when the data-set gets large and hyper-tuning the model's parameters (which are quite large in number) should help with reducing the cost and getting a better F-Score."
    ]
   },
   {
@@ -1108,7 +1116,7 @@
     "grid_obj = GridSearchCV(clf, parameters, scoring=scorer)\n",
     "\n",
     "# TODO: Fit the grid search object to the training data and find the optimal parameters\n",
-    "grid_fit = grid_obj.fit(X_train, y_train.ravel())\n",
+    "grid_fit = grid_obj.fit(X_train, y_train.reshape(-1)\n",
     "\n",
     "# print grid_fit.best_params_\n",
     "\n",
@@ -1116,7 +1124,7 @@
     "best_clf = grid_fit.best_estimator_\n",
     "\n",
     "# Make predictions using the unoptimized and model\n",
-    "predictions = (clf.fit(X_train, y_train.ravel())).predict(X_test)\n",
+    "predictions = (clf.fit(X_train, y_train.reshape(-1)).predict(X_test)\n",
     "best_predictions = best_clf.predict(X_test)\n",
     "\n",
     "# Report the before-and-afterscores\n",
